--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@kibocommerce/rest-sdk": "^2.2530.1",
     "bottleneck": "^2.19.5",
     "dotenv": "^17.2.3",
+    "pino": "^10.2.0",
+    "pino-pretty": "^13.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
